--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.5
   sqflite:
   get: ^4.6.6
-  cloud_firestore: ^4.13.6
+  cloud_firestore: ^4.15.5
   flutter_slider_drawer: ^2.1.3
   google_fonts: ^6.1.0
   provider: ^6.1.1
@@ -46,7 +46,8 @@ dependencies:
   stylish_dialog: ^1.0.2
   flutter_rating_bar: ^4.0.1
   badges: ^3.1.2
-  flutter_svg: ^2.0.9
+  flutter_svg: ^2.0.10+1
+  wave_navigation_bar:
 
 
 dev_dependencies:
@@ -90,6 +91,12 @@ flutter:
    - Assets/rebookbrand/reb/
    - Assets/onboarding/
    - Assets/skechers/sub/
+   - Assets/images/
+   - Assets/beauty/
+   - Assets/electronics/
+   - Assets/fashion/
+   - Assets/sports/
+   - Assets/home_kitchen/
 
   #   - images/a_dot_ham.jpeg
 
@@ -104,10 +111,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Gumela
+      fonts:
+        - asset: Assets/fonts/gumela.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
